- added hover effects to svg icons (after animations) - fixed touch scrolling (using touch-action: none) -- still an issue in safari - added event listeners to svg as a hack for z-index position

--- a/images/svg.css
+++ b/images/svg.css
@@ -1,5 +1,5 @@
 /***************************************************
- * Generated by SVG Artista on 10/8/2022, 11:45:07 AM
+ * Stroke / fill animations generated by SVG Artista
  * MIT license (https://opensource.org/licenses/MIT)
  * W. https://svgartista.net
  **************************************************/
@@ -8,15 +8,21 @@
 	/* path-length: 1; */
 /* } */
 
+
+#edpSVG {
+	pointer-events: none;
+	touch-action: none;
+}
+
 path {
-	/* pointer-events:all; */
+	pointer-events:all;
 }
 
 .withFilter path{
 	filter: url(#pencilTexture4);
 }
 
-#investigate:hover {
+#investigate.withHover:hover {
 	fill: gold;
 	fill-opacity: 0.6;
 	transform: scale(1.1) translate(-1px, -1px);
@@ -27,7 +33,7 @@ path {
 	transform: translate(46.2px, 28.4px);
 	/* pointer-events: stroke; */
 }
-#ideate:hover {
+#ideate.withHover:hover {
 	/* stroke: red; */
 	fill: gold;
 	fill-opacity: 0.6;
@@ -39,7 +45,7 @@ path.createGroup {
 	transform: translate(0, 57.6px);
 }
 
-g.createGroup:hover > path{
+g.createGroup:hover > path.withHover{
 	fill: gold;
 	fill-opacity: 0.6;
 	transform: scale(1.1) translate(-1px, 51px);
@@ -51,7 +57,7 @@ path.communicateGroup {
 	/* transform: translate(-57.6px, 28.8px) rotate(-90deg) translateX(-24px); */
 }
 
-g.communicateGroup:hover > path {
+g.communicateGroup:hover > path.withHover {
 	transform: scale(1.1) translate(-53px, 25px);
 	transition: transform ease-in .25s;
 	fill: gold;
@@ -62,14 +68,14 @@ g.communicateGroup:hover > path {
 	#ideate {
 		transform: translate(46.2px, 28.4px) rotate(-90deg) translate(-35px, 11px);
 	}
-	#ideate:hover {
+	#ideate.withHover:hover {
 		transform: translate(46.2px, 28.4px) rotate(-90deg) translate(-37.5px, 9.5px) scale(1.1);
 		transition: transform ease-in .25s;
 	}
 	path.communicateGroup {
 		transform: translate(-57.6px, 28.8px) rotate(-90deg) translateX(-24px);
 	}
-	g.communicateGroup:hover > path {
+	g.communicateGroup:hover > path.withHover {
 		transform: scale(1.1) rotate(-90deg) translate(-49px, -54px);
 		transition: transform ease-in .25s;
 	}
