--- a/styles.css
+++ b/styles.css
@@ -24,18 +24,19 @@
 	}
 }
 
-html, body {
+html {
 	margin: 0;
 	scroll-behavior: smooth;
-	max-width: 100%;
+	max-width: 100vw;
 	overflow:hidden;
 }
 
-/* body { */
-	/* margin: 0; */
-	/* overflow:hidden; */
-	/* max-width: 100%; */
-/* } */
+body {
+	margin: 0;
+	overflow:hidden;
+	max-width: 100vw;
+	touch-action: none;
+}
 
 div.parallaxBG {
 	background-image: url('images/gridPaperbg_flip.jpg');
@@ -64,9 +65,10 @@ span.cover {
 	position: absolute;
 	top: 0;
 	height: 100vh;
+	/* use svh for mobile */
 	width: 100vw;
 	overflow: hidden;
-	pointer-events: fill;
+	/* pointer-events: none; */
 	z-index: 1;
 }
 
@@ -448,6 +450,7 @@ h1, h2 {
 	opacity: 0;
 	z-index: 5;
 	transform: scale(0);
+	touch-action: pinch-zoom;
 }
 
 .storyBoard.focused {
